@@ -1,3 +1,7 @@
+2011-03-03  TOMITA Masahiro  <tommy@tmtm.org>
+
+	* add MmapScanner#scan_until()
+
 2011-03-02  TOMITA Masahiro  <tommy@tmtm.org>
 
 	* 0.2
